--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -2,7 +2,8 @@
         <html>
         <head>
 	<?php 
-        echo $this->headMeta(); 
+  
+       echo $this->headMeta(); 
     echo $this->JQuery();
         ?>
         <link href="<?php echo $this->baseUrl('css/bootstrap.css') ?>" rel="stylesheet" media="screen">
@@ -18,11 +19,27 @@
               <div class="collapse navbar-collapse">
                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                        <ul class="nav navbar-nav">
-                           
+                           <a href ="<?php echo $this->url(array(
+                               'co'
+                           )) ?>"></a>
                            <li class="dropdown">
-                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Klient <span class="caret"></span></a>
                                <ul class="dropdown-menu" role="menu">
-                               <?php echo $this->menu(); ?>     
+                               
+                                   <?php     
+                                   
+                                   echo $this->menuKlient();
+                                   ?>
+                               </ul>
+                           </li>
+                            <li class="dropdown">
+                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Umowa <span class="caret"></span></a>
+                               <ul class="dropdown-menu" role="menu">
+                               
+                                   <?php     
+                                   
+                                   
+                                   echo $this->menuUmowa();?>
                                </ul>
                            </li>
                            
